; ModuleID = '/home/carl/AnghaBench/kphp-kdb/storage/extr_storage-engine.c_return_file_location.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/storage/extr_storage-engine.c_return_file_location.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gather_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gather_data*)* @return_file_location to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @return_file_location(%struct.gather_data* %0) #0 {
  %2 = alloca %struct.gather_data*, align 8
  store %struct.gather_data* %0, %struct.gather_data** %2, align 8
  %3 = load %struct.gather_data*, %struct.gather_data** %2, align 8
  %4 = call i64 @rpc_mode(%struct.gather_data* %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load %struct.gather_data*, %struct.gather_data** %2, align 8
  %8 = call i32 @rpc_return_file_location(%struct.gather_data* %7)
  br label %12

9:                                                ; preds = %1
  %10 = load %struct.gather_data*, %struct.gather_data** %2, align 8
  %11 = call i32 @memcache_return_file_location(%struct.gather_data* %10)
  br label %12

12:                                               ; preds = %9, %6
  %13 = phi i32 [ %8, %6 ], [ %11, %9 ]
  ret i32 %13
}

declare dso_local i64 @rpc_mode(%struct.gather_data*) #1

declare dso_local i32 @rpc_return_file_location(%struct.gather_data*) #1

declare dso_local i32 @memcache_return_file_location(%struct.gather_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
